SERVER-62895 Remove `const` from `DurableViewCatalog::belongsTo` return type