src/mongo/db/views/durable_view_catalog.h
@@ -81,7 +81,7 @@ public:
                         const BSONObj& view) = 0;
     virtual void remove(OperationContext* opCtx, const NamespaceString& name) = 0;
     virtual const std::string& getName() const = 0;
-    virtual const bool belongsTo(const Database* db) const = 0;
+    virtual bool belongsTo(const Database* db) const = 0;
     virtual ~DurableViewCatalog() = default;
 };
 
@@ -100,7 +100,7 @@ public:
     void upsert(OperationContext* opCtx, const NamespaceString& name, const BSONObj& view);
     void remove(OperationContext* opCtx, const NamespaceString& name);
     const std::string& getName() const;
-    const bool belongsTo(const Database* db) const;
+    bool belongsTo(const Database* db) const;
 
 private:
     void _iterate(OperationContext* opCtx,
